Add home page layout from Figma mock-up
* Add an Open Streets Map iframe as placeholder for the ArcGIS map
* Separate the outage map and outage reporting tool as separate tabs
* Mess around with the CSS (likely needs fixing)

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
-  display: flex;
+  display: block;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   height: 100vh;
   width: 100vw;
@@ -10,9 +9,14 @@ body {
 }
 
 main {
-  display: flex;
+  flex: 1 1 100%;
+  /*display: flex;*/
   flex-direction: column;
   align-items: stretch;
+}
+
+h4 {
+  text-align: left;
 }
 
 button {
@@ -62,4 +66,21 @@ li:hover {
 a {
   font-weight: 800;
   text-decoration: none;
+}
+
+.map-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
