--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,19 @@
   text-align: center;
 }
 
+.tab-list-item {
+  display: inline-block;
+  list-style: none;
+  margin-bottom: -1px;
+  padding: 0.5rem 0.75rem;
+}
+
+.tab-list-active {
+  background-color: white;
+  border: solid #ccc;
+  border-width: 1px 1px 0 1px;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
