--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+.tab-list {
+  border-bottom: 1px solid #ccc;
+  padding-left: 0;
+}
+
 .tab-list-item {
   display: inline-block;
   list-style: none;
@@ -12,44 +17,13 @@
   padding: 0.5rem 0.75rem;
 }
 
+.tab-list-item:hover {
+  background-color: rgb(157, 218, 222);
+}
+
 .tab-list-active {
-  background-color: white;
+  background-color: rgb(123, 194, 200);
   border: solid #ccc;
   border-width: 1px 1px 0 1px;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  border-bottom: 0.15em solid black;
 }
