--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,29 +10,40 @@
 }
 
 .navbar-right {
-  display: flex;
   align-items: center;
+}
+
+.navbar-left .logo:hover {
+  filter: contrast(200%);
 }
 
 .navbar-right .help-img, .phone-img, .user-img {
   display: flex;
   height: 2em;
   padding: 0.3em;
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  display: block;
+  text-align: left;
+}
+
+.show {
+  display: block;
+  top: 500px;
 }
 
 @media (max-width: 768px) {
-	.navbar-center .nav-links {
-		display: none;
-	}
-
-	.navbar-right {
+	.navbar-right, .navbar-left {
 		display: flex;
 		align-items: center;
-	}
-
-	.navbar-right .hamburger-menu {
-		display: block;
-		font-size: 1.5rem;
-		cursor: pointer;
 	}
 }
