--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 /* body {
   margin: 0;
-  background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
-  display: flex;
+  display: block;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   height: 100vh;
   width: 100vw;
@@ -10,29 +9,9 @@
 }
 
 main {
-  display: flex;
+  flex: 1 1 100%;
   flex-direction: column;
   align-items: stretch;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  color: white;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 ul {
@@ -45,7 +24,6 @@ ul {
   margin: 8px 0;
   border: 1px solid black;
   gap: 1px;
-  background-color: black;
   border-radius: 8px;
   overflow: auto;
 }
@@ -62,4 +40,14 @@ li:hover {
 a {
   font-weight: 800;
   text-decoration: none;
-} */
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
